# khanij

./: CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  codecov.yml  deny.toml
.github/workflows/: ci.yml  release.yml
benches/: benchmarks.rs
docs/architecture/: overview.md
docs/development/: roadmap.md
examples/: basic.rs  dating.rs  ore_deposit.rs  rock_cycle.rs
src/: bridge.rs  crystal.rs  crystallography.rs  dating.rs  error.rs  formula.rs  geochemistry.rs  geothermal.rs  glaciology.rs  grid.rs  hydrology.rs  hydrothermal.rs  lib.rs  logging.rs  mineral.rs  ore.rs  rock.rs  rock_mechanics.rs  sediment.rs  soil.rs  stability.rs  stratigraphy.rs  tectonics.rs  texture.rs  timescale.rs  volcanic.rs  weathering.rs
src/integration/: soorat.rs
tests/: integration.rs
