[package]
name = "khanij"
version = "1.0.0"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0-only"
description = "Khanij — geology and mineralogy engine for crystal structures, rock cycles, soil, and mineral properties"
homepage = "https://github.com/MacCracken/khanij"
repository = "https://github.com/MacCracken/khanij"
readme = "README.md"
documentation = "https://docs.rs/khanij"
keywords = ["geology", "minerals", "rocks", "soil", "crystals"]
categories = ["science", "simulation"]
exclude = [".claude/", ".github/", "docs/", "scripts/"]

[features]
default = []
chemistry = ["dep:kimiya"]
fluids = ["dep:pravash"]
mechanics = ["dep:dravya"]
thermodynamics = ["dep:ushma"]
weather = ["dep:badal"]
logging = ["dep:tracing-subscriber"]

[dependencies]
badal = { version = "1", optional = true }
dravya = { version = "1", optional = true }
hisab = "1.1"
kimiya = { version = "1", optional = true }
pravash = { version = "1.1", optional = true, features = ["buoyancy", "shallow"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }
ushma = { version = "1", optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
serde_json = "1"

[[bench]]
name = "benchmarks"
harness = false
